--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ default: &default
 
 development:
   <<: *default
-  database: tnja_development
+  url: <%= ENV['DB_URL'] %>
 
 test:
   <<: *default
@@ -14,3 +14,4 @@ test:
 production:
   <<: *default
   url: <%= ENV['DB_URL'] %>
+  proxy_host: <%= ENV['FIXIE_SOCKS_HOST'] %>
